Update Method for Fluid Width/Height

--- a/task_04/task_04.html
+++ b/task_04/task_04.html
@@ -6,10 +6,11 @@
     <link href="task_04.css" rel="stylesheet">
 </head>
 <body>
-<div id="floater"></div>
+<!--<div id="floater"></div>-->
 <div id="centered">
     <div id="left-top"></div>
     <div id="right-bottom"></div>
 </div>
+
 </body>
 </html>
